# CollideSparcles

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  cmake_build_debug_sparkle.sh  cmake_build_debug_transparent.sh  cmake_config_debug.sh  delete_binaries.sh  run_render_test.sh  run_sparkle.sh  run_transparent.sh
PSscripts/: cmake_build.ps1  cmake_config_debug.ps1  cmake_config_release.ps1  delete_executables.ps1  run_debug.ps1  run_release.ps1
SHscripts/: cmake_build.sh  cmake_build_back_tr.sh  cmake_build_full_tr.sh  cmake_build_transparent.sh  cmake_config_debug.sh  cmake_config_release.sh  run_ful_tr.sh  run_release.sh  run_sparkle_release.sh  run_transparent_release.sh
libs/application/: WheelGameApplication.cpp  WheelGameApplication.hpp
libs/arena/: Arena.cpp  Arena.hpp
libs/background/: Background.cpp  Background.hpp
libs/bubble/: Bubble.cpp  Bubble.hpp
libs/randomizer/: Randomizer.cpp  Randomizer.hpp
libs/spawnable/: Spawnable.hpp
libs/textwidget/: TextWidget.cpp  TextWidget.hpp
libs/utilities/: Utils.hpp  WheelUtils.hpp
libs/wheel/: Wheel.cpp  Wheel.hpp
scripts/: cmake_build_debug_four_tiles.sh  cmake_build_debug_render.sh  run_back_tr.sh  run_four_tiles.sh  run_sparkle.sh
targets/: back_tr.cpp  four_tiles.cpp  full_tr.cpp  render.cpp  sparkle.cpp  transparent.cpp
tested_headers/: Arena.hpp  Background.hpp  BackgroundTexture.hpp  MainWindow.hpp  Wheel.cpp  Wheel.hpp  WheelGameApplication.hpp  WheelUtils.hpp
